Improved config.env

--- a/config.env
+++ b/config.env
@@ -2,7 +2,9 @@
 API_ID=6                                  
 API_HASH=eb06d4abfb49dc3eeb1aeb98ae0f581e
 BOT_TOKEN=
-SUDO_USERID= [834836509, 754836509]
+SUDO_USERID= [834836509]
+
+#If the bot is intended for public use, keep the chat ID as 0. Otherwise, add the name of the chat ID to the list.
 AUTHORIZED_CHATS=[] 
 
 #SABnzbd Configs.
